# c2d

./: .env.example  .gitignore  README.md  analyst-v6.html  docker-compose.yml  environment.yml  prototype-datagrid.html  pyproject.toml
backend/agents/: base.py  critic_agent.py  json_utils.py  planner.py  report_agent.py  sql_agent.py  stats_agent.py  viz_agent.py
backend/api/: main.py  routes.py  schemas.py  sse.py
backend/config/: prompts.py  settings.py
backend/db/: engine.py  loader.py  sandbox.py  versioning.py
backend/graph/: language.py  pipeline.py  state.py
backend/knowledge/: duckdb_retriever.py
backend/memory/: null_handling_prefs.py
backend/scripts/: build_duckdb_kb.py
backend/tools/: sql_tools.py
data/preferences/: proj_784lxsye_null_handling.json  proj_wfj8xtku_null_handling.json
doc/duckdb_official/: README.md  quick_reference.md
docs/: agent_design.md  api.md  architecture.md  data_pipeline.md  frontend.md  pending_data_quality_todos.md  technical_deep_dive.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/chat/: ChatMarkdown.tsx  ChatPanel.tsx  NullHandlingCard.tsx
frontend/src/hooks/: useAnalysisStream.ts
frontend/src/stores/: chatStore.ts  datasetStore.ts  projectStore.ts  resultsStore.ts  schemaStore.ts  uiStore.ts
frontend/src/styles/: chat copy.css  chat.css  globals copy.css  globals.css  layout.css  schema.css
frontend/src/utils/: miniZip.ts
tests/: test_agents.py
(+16 files in other folders)
